Added dialogs for burst attributes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Stopmotion</string>
+
+
+    <string name="burst_time_1">1 Sec.</string>
+    <string name="burst_time_2">2 Sec.</string>
+    <string name="burst_time_3">3 Sec.</string>
+    <string name="burst_time_4">4 Sec.</string>
+    <string name="burst_time_5">5 Sec.</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
