--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="settings_use_thumbnails_description">Use thumbnails in the overview instead of playing the Gifs. For a better performance.</string>
     <string name="settings_pushes_title">Push Notifications</string>
     <string name="settings_pushes_description">Receive push notifications from Stopmotion</string>
-    <string name="settings_version">Version: %d</string>
+    <string name="settings_version">Version: %1$s</string>
 
     <string name="edit_text_hint_gif_name">Give the gif a name</string>
     <string name="main_grand_permission_text">You have to grand Camera permissions in order to use Stopmotion</string>
