--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="burst_time_4">4 Sec.</string>
     <string name="burst_time_5">5 Sec.</string>
 
+    <string name="compression_rate_low">Low</string>
+    <string name="compression_rate_medium">Medium</string>
+    <string name="compression_rate_high">High</string>
 
     <!-- Dialogs -->
     <string name="dialog_delete_title">Are you sure?</string>
@@ -33,6 +36,9 @@
     <string name="settings_pushes_title">Push Notifications</string>
     <string name="settings_pushes_description">Receive push notifications from Stopmotion</string>
     <string name="settings_version">Version: %1$s</string>
+    <string name="settings_gif_compression_rate_title">Gif Compression Rate</string>
+    <string name="settings_gif_compression_rate_description">A higher compression rate decreases the Gif conversion time.</string>
+
 
     <string name="edit_text_hint_gif_name">Give the gif a name</string>
     <string name="main_grand_permission_text">You have to grand Camera permissions in order to use Stopmotion</string>
