--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="snackbar_renamed_gif">Renamed %1$s to %2$s</string>
     <string name="snackbar_info_taking_time">Converting to Gif, this can take some time</string>
     <string name="snackbar_info_loading_time">Loading the animated Gif. Please be patient.</string>
+    <string name="snackbar_warning_low_compression">Set Low compression rate. We recommend a higher compression rate</string>
 
     <!--Settings-->
     <string name="settings_title">Settings</string>
