--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="settings_version">Version: %1$s</string>
     <string name="settings_gif_compression_rate_title">Gif Compression Rate</string>
     <string name="settings_gif_compression_rate_description">A higher compression rate decreases the Gif conversion time.</string>
+    <string name="settings_licences_title">Licenses</string>
+    <string name="settings_licences_description">An overview of the used open source licenses</string>
 
 
     <string name="edit_text_hint_gif_name">Give the gif a name</string>
