--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,6 @@
     <string name="rating_rate_negative">No, thanks</string>
     <string name="rating_feedback_email_title">Stopmotion App Feedback</string>
     <string name="rating_email_choose_text">Send email using…</string>
+    <string name="rating_toast_no_action">Thanks anyway</string>
 
 </resources>
