--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -66,5 +66,8 @@
     <string name="rating_rate_positive">Okay, los geht\'s</string>
     <string name="rating_rate_text">Super, willst du Stopmotion im Play Store bewerten?</string>
     <string name="rating_toast_no_action">Trotzdem Danke</string>
+    <string name="menu_entry_save">Speichern</string>
+    <string name="snackbar_image_required">Du brauchst mehr Bilder um ein Gif zu erstellen</string>
+    <string name="snackbar_take_picture_action">Foto aufnehmen</string>
 
 </resources>
