Added german translations

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -69,5 +69,8 @@
     <string name="menu_entry_generate">Generieren</string>
     <string name="snackbar_image_required">Du brauchst mehr Bilder um ein Gif zu erstellen</string>
     <string name="snackbar_take_picture_action">Foto aufnehmen</string>
+    <string name="converting_images_amount_state">Konvertiere Bild %1$s</string>
+    <string name="generate_title">Gif erstellen</string>
+    <string name="converting_images_magic_state">Benutze ein bisschen Magie</string>
 
 </resources>
