--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -72,5 +72,15 @@
     <string name="converting_images_amount_state">Konvertiere Bild %1$s</string>
     <string name="generate_title">Gif erstellen</string>
     <string name="converting_images_magic_state">Benutze ein bisschen Magie</string>
+    <string name="generate_button_save">Speichern</string>
+    <string name="generate_successfully_generated_info_1">Dein Gif wurde in %1$s Sekunden generiert*.</string>
+    <string name="generate_successfully_generated_info_2">Es hat eine Größe von %1$s bytes.</string>
+    <string name="generate_successfully_generated_info_3">Es besteht aus %1$s einzelnen Bilder, die alle 1/4 Sekunden angezeigt werden und daher eine Gesamtlaufzeit von %2$s Sekunden hat.</string>
+    <string name="generate_successfully_generated_title">Gif erfolgreich erstellt</string>
+    <string name="generated_with_text_1">Keine Einhörnern wurden während diesem Prozess verletzt</string>
+    <string name="generated_with_text_2">12% Magie benutzt</string>
+    <string name="generated_with_text_3">Hat super funktioniert</string>
+    <string name="generated_with_text_4">Keine Magie gebraucht</string>
+    <string name="generated_with_text_5">Wegen den schönen Motivieven hat es ein bisschen länger gedauert</string>
 
 </resources>
