--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="settings_gif_compression_rate_description">A higher compression rate decreases the Gif conversion time.</string>
     <string name="settings_licences_title">Licenses</string>
     <string name="settings_licences_description">An overview of the used open source licenses</string>
+    <string name="settings_storage_title">Use external Storage</string>
+    <string name="settings_storage_description">Use External Storage, like you sd card</string>
 
 
     <string name="edit_text_hint_gif_name">Give the gif a name</string>
