move to external

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="snackbar_warning_low_compression">Set Low compression rate. We recommend a higher compression rate</string>
     <string name="snackbar_image_required">You need more Images to generate a Gif</string>
     <string name="snackbar_take_picture_action">Take Picture</string>
+    <string name="snackbar_error_occurred">An Error occurred, Sorry</string>
 
     <!--Settings-->
     <string name="settings_title">Settings</string>
