--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="burst_time_6">4 Sec.</string>
     <string name="burst_time_7">5 Sec.</string>
 
+    <string name="take_picture_shortcut_short_label1">Create Gif</string>
+    <string name="take_picture_shortcut_long_label1">Create Stopmotion Gif</string>
+    <string name="take_picture_disabled_message1">Disable Shortcut</string>
+
     <!-- Empty list-->
     <string name="empty_list_text">Create your first Stopmotion Gif</string>
 
